# clingo-explaid

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGES.md  CONTRIBUTING.md  DEVELOPMENT.md  LIMITATIONS.md  README.md  TODO.md  TODOS.md  init.py  noxfile.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-test.yml  deploy.yml  test.yml
benchmark/: README.md  benchmarks.py  generator.lp
clingexplaid/: __main__.py
clingexplaid/utils/: __init__.py  cli.py  logger.py  muc.py  parser.py  transformer.py
doc/: conf.py  index.md  index.rst
doc/_static/css/: custom.css
doc/content/: installation.md  quickstart.md
doc/content/encodings/: index.md  instance.md
examples/: example5.lp  sudoku.lp  sudoku_4x4.lp  sudoku_4x4_no_init.lp  sudoku_encoding.lp  sudoku_encoding_2.lp  test3.lp  test_sat.lp  x.lp
examples/graph_coloring/: README.md  encoding.lp  instance.lp
examples/misc/: bad_mucs.lp  many_atoms.lp  sat.lp  sat_simple.lp  sat_ui.lp  sat_ui_multi_opt.lp  simple.lp  soup.lp  sudoku_encoding.lp  test.lp  test2.lp  test4.lp  test_inert.lp  x.lp  zero_arity_assumptions.lp
examples/misc/test/: blob.lp
examples/queens/: README.md  encoding.lp  instance.lp
examples/sudoku/: README.md  encoding.lp  instance.lp
experiments/asp_appraoch/: README.md  example.multi_muc.converted.reified.v2.lp  example.multi_muc.converted.v2.lp  example.multi_muc.lp  meta_encoding.unsat.lp  meta_encoding.unsat.v2.lp  test.head_disjunction.converted.lp  test.head_disjunction.converted.reified.lp  test.head_disjunction.lp
src/clingexplaid/: __main__.py
src/clingexplaid/cli/: clingo_app.py  textual_gui.py  textual_modes.py  textual_new.py  textual_style.py  textual_style_new.py  util.py
src/clingexplaid/cli/modes/: __init__.py  base.py  explanation.py  mus.py  solver_decisions.py  solving.py  unsatisfiable_constraints.py
src/clingexplaid/cli/style/: __init__.py  explanation.py  mus.py  solver_decisions.py  solving.py
src/clingexplaid/exceptions/: __init__.py
src/clingexplaid/explain/: __init__.py  constants.py  textual.py  ucorexplain.py
src/clingexplaid/explain/encodings/: clingraph_simple.lp  clingraph_tree.lp
src/clingexplaid/muc/: __init__.py  core_computer.py
src/clingexplaid/mus/: core_computer.py  explorers.py  oracles.py  utils.py
src/clingexplaid/mus/encodings/: explored.lp
src/clingexplaid/mus/explorers/: __init__.py  asp.py  base.py  powerset.py
src/clingexplaid/preprocessors/: __init__.py  preprocessor_assumption.py
src/clingexplaid/propagators/: __init__.py  constants.py  propagator_decision_order.py  propagator_solver_decisions.py
src/clingexplaid/temp/: encoding.lp
src/clingexplaid/transformers/: __init__.py  constants.py  exceptions.py  transformer_assumption.py  transformer_constraint.py  transformer_fact.py  transformer_optimization_remover.py  transformer_rule_id.py  transformer_rule_splitter.py
src/clingexplaid/unsat_constraints/: __init__.py  constants.py  unsat_constraint_computer.py
src/clingexplaid/utils/: __init__.py  cli.py  logger.py  match.py  muc.py  parser.py  propagators.py  symbols.py  transformer.py  types.py  unsat_constraints.py
src/clingexplaid/utils/logic_programs/: asp_approach.lp
src/fillname/: __init__.py  __main__.py
src/fillname/utils/: logger.py  parser.py
tests/: test_main.py
tests/clingexplaid/: test_main.py  test_muc.py  test_preprocessors.py  test_propagators.py  test_transformers.py  test_unsat_constraints.py  test_utils.py
tests/clingexplaid/res/: test_constant.lp  test_included.lp  test_includes.lp  test_program.lp  test_program_constants.lp  test_program_constraints.lp  test_program_decision_order.lp  test_program_multi_muc.lp  test_program_optimization.lp  test_program_pattern.lp  test_program_rules.lp  test_program_unsat_constraints.lp  transformed_constant.lp  transformed_includes.lp  transformed_program_assumptions.lp  transformed_program_assumptions_all.lp  transformed_program_assumptions_certain_signatures.lp  transformed_program_constraints.lp  transformed_program_constraints_id.lp  transformed_program_facts.lp  transformed_program_nothing_transformed.lp  transformed_program_optimization.lp  transformed_program_pattern.lp  transformed_program_rule_ids.lp  transformed_program_rules_split.lp
