[metadata]
name = clingexplaid
version = 1.0.0
author = Hannes Weichelt
author_email = weichelt.h@uni-potsdam.de
description = Tools for Explaination with clingo.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/krr-up/clingo-explaid

[options]
packages = clingexplaid
install_requires =
    importlib_metadata;python_version<'3.8'
    clingo>=5.6.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pylint>=2.12
    pytest>=6.2
test =
    pytest>=6.2

[options.entry_points]
console_scripts =
    clingexplaid = clingexplaid.__main__:main
