[metadata]
name = clingexplaid
version = 1.0.1
author = Hannes Weichelt
author_email = weichelt.h@uni-potsdam.de
description = Tools for Explaination with clingo.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/krr-up/clingo-explaid

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
    importlib_metadata;python_version<'3.8'
    clingo>=5.6.0
    clingox>=1.2.0
    autoflake

[options.packages.find]
where = src

[options.extras_require]
format =
    black
    isort
    autoflake
lint_flake8 =
    flake8
    flake8-black
    flake8-isort
lint_pylint =
    pylint
typecheck =
    types-setuptools
    mypy
test =
    coverage
doc =
    sphinx
    sphinx_rtd_theme
    nbsphinx
dev =
    clingexplaid[test,typecheck,lint_pylint,lint_flake8]

[options.entry_points]
console_scripts =
    clingexplaid = clingexplaid.__main__:main
