[metadata]
name = clingexplaid
version = 1.1.0
author = Hannes Weichelt
author_email = hweichelt@uni-potsdam.de
description = API to aid the development of explanation systems using clingo
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/potassco/clingo-explaid
